force-app/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>This object is used to create purchase order</description>
    <label>BT Purchase Order</label>
    <nameField>
        <displayFormat>PO-{0000000}</displayFormat>
        <label>PO #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Purchase Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>