force-app/main/default/objects/Purchase_Order__c/fields/BT_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>BT_Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>BT Purchase Orders</relationshipLabel>
    <relationshipName>BT_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>