force-app/main/default/objects/Purchase_Order__c/fields/Budget_Line2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Line2</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>