force-app/main/default/objects/Purchase_Order__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <inlineHelpText>Completed work percentage of the tasks associated with a PO.</inlineHelpText>
    <label>Schedule Item Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>