force-app/main/default/objects/Purchase_Order__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <inlineHelpText>Date the work is estimated to complete.</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>