force-app/main/default/objects/Purchase_Order__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <inlineHelpText>Date the work is estimated to start.</inlineHelpText>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>