force-app/main/default/objects/Purchase_Order__c/fields/of_Total_PO_s__c.field-meta.xml
<CustomField>
    <fullName>of_Total_PO_s__c</fullName>
    <label>% of Total PO&apos;s</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>