force-app/main/default/objects/Purchase_Order__c/fields/Ordered_By__c.field-meta.xml
<CustomField>
    <fullName>Ordered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordered By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>