force-app/main/default/objects/Purchase_Order__c/fields/PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount__c</fullName>
    <description>Sum of all PO item amount</description>
    <inlineHelpText>Total PO Amount rolled up from PO Lines amounts</inlineHelpText>
    <label>SubTotal</label>
    <summarizedField>Purchase_Order_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>