force-app/main/default/objects/Purchase_Order__c/fields/Quantity_Received__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Received__c</fullName>
    <inlineHelpText>This is the rollup amount from the PO Lines Quantity Received field.</inlineHelpText>
    <label>Received</label>
    <summarizedField>Purchase_Order_Item__c.Quantity_Received__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>