force-app/main/default/objects/Purchase_Order__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <formula>Quantity_Received__c /  Total_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Quantity Received / Quantity Ordered.</inlineHelpText>
    <label>Received %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>