force-app/main/default/objects/Purchase_Order__c/fields/Remaining__c.field-meta.xml
<CustomField>
    <fullName>Remaining__c</fullName>
    <formula>Quantity_Remaining__c /  Total_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Quantity Remaining / Quantity Ordered.</inlineHelpText>
    <label>Remaining %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>