force-app/main/default/objects/Purchase_Order__c/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is indicate that PO is created from RFQ</description>
    <inlineHelpText>RFQ that generated this PO.</inlineHelpText>
    <label>Associated RFQ</label>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>