force-app/main/default/objects/Purchase_Order__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the schedule you would like to associate this Purchase Order with.</inlineHelpText>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>