force-app/main/default/objects/Purchase_Order__c/fields/SubTotal_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_with_Tax__c</fullName>
    <inlineHelpText>Rollup of the Total Amount Due field with Tax included</inlineHelpText>
    <label>SubTotal (Tax)</label>
    <summarizedField>Purchase_Order_Item__c.Total_Amount_Tax__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>