force-app/main/default/objects/Purchase_Order__c/fields/Vendor_PO_Total__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PO_Total__c</fullName>
    <label>Vendor PO Total</label>
    <summarizedField>Purchase_Order_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>