force-app/main/default/objects/Purchase_Order__c/listViews/All_POS.listView-meta.xml
<ListView>
    <fullName>All_POS</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Vendor__c</columns>
    <columns>PO_Amount__c</columns>
    <columns>Tax__c</columns>
    <columns>PO_Total__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>PO_Balance__c</columns>
    <columns>Paid__c</columns>
    <columns>Over_Under_Paid__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Received__c</columns>
    <columns>Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>